fix: corrected zaakafhandelcomponent instead of zac in Chart.yaml and created alias zac

--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -66,7 +66,8 @@ dependencies:
     version: 0.4.1
     repository: "@openshift"
     condition: infinispan.enabled
-  - name: zac
+  - name: zaakafhandelcomponent
+    alias: zac
     version: 0.4.6
     repository: "@zac"
     condition: zac.enabled
