feat: added defaults for zac.mail and using 'latest' version of zac helm chart now

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -871,8 +871,8 @@ zac:
     smtp:
       server: "mail.example.nl"
       port: "587"
-      username: ""
-      password: ""
+      username: "dummy"
+      password: "dummy"
   maxFileSizeMB: 150
   nginx:
     enabled: true
