chore: quoted rsin defaults

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -888,9 +888,9 @@ zac:
     url: http://open-forms.example.nl
   organizations:
     bron:
-      rsin: 000000000
+      rsin: "000000000"
     verantwoordelijke:
-      rsin: 000000000
+      rsin: "000000000"
   smartDocuments:
     enabled: false
     url: ""
