--- a/charts/podiumd/templates/frontend-secret.yaml
+++ b/charts/podiumd/templates/frontend-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.kiss.enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -36,3 +37,4 @@ stringData:
   SDG_API_KEY: {{ .Values.kiss.objecten.token | quote }}
   ZAKEN_API_CLIENT_ID: {{ .Values.kiss.adapter.clientId | quote }}
   ZAKEN_API_KEY: {{ .Values.kiss.adapter.secret | quote }}
+{{- end }}
