--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -39,7 +39,7 @@ dependencies:
     repository: "@maykinmedia"
     condition: objecten.enabled
   - name: objecttypen
-    version: 1.2.0
+    version: 1.3.0-beta.3
     repository: "@maykinmedia"
     condition: objecttypen.enabled
   - name: openklant
