--- a/charts/podiumd/templates/adapter-config.yaml
+++ b/charts/podiumd/templates/adapter-config.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.kiss.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -13,3 +14,4 @@ data:
   INTERNE_TAAK_OBJECT_TYPE_URL: {{ printf "%s/api/v2/objecttypes/%s" (default (printf "http://objecttypen.%s.svc.cluster.local" .Release.Namespace) .Values.kiss.objecttypen.baseUrlIntern) .Values.kiss.objecttypen.interneTaakUUID | quote }}
   SMOELENBOEK_BASE_URL: {{ default (printf "http://objecten.%s.svc.cluster.local" .Release.Namespace) .Values.kiss.objecten.baseUrl | quote }}
   SMOELENBOEK_OBJECT_TYPE_URL: {{ printf "%s/api/v2/objecttypes/%s" .Values.kiss.objecttypen.baseUrlExtern .Values.kiss.objecttypen.medewerkerUUID | quote }}
+{{- end }}
