--- a/charts/podiumd/templates/adapter-deployment.yaml
+++ b/charts/podiumd/templates/adapter-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.kiss.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -49,3 +50,4 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
