--- a/charts/podiumd/templates/adapter-secret.yaml
+++ b/charts/podiumd/templates/adapter-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.kiss.enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -11,4 +12,4 @@ stringData:
   ESUITE_CLIENT_ID: {{ .Values.kiss.esuite.clientId | quote }}
   ESUITE_CLIENT_SECRET: {{ .Values.kiss.esuite.secret | quote }}
   SMOELENBOEK_TOKEN: {{ .Values.kiss.objecten.token | quote }}
-
+{{- end }}
