--- a/charts/podiumd/templates/frontend-deployment.yaml
+++ b/charts/podiumd/templates/frontend-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.kiss.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -57,3 +58,4 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+  {{- end }}
