--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.keycloak.enabled -}}
 {{- if .Values.keycloak.keycloakConfigCli.enabled -}}
 apiVersion: v1
 kind: ConfigMap
@@ -596,5 +597,6 @@ data:
 {{- with .Values.keycloak.config.realmIdentityProviderMappers }}
     identityProviderMappers:
     {{- toYaml . | nindent 4 }}
+{{- end }}
 {{- end }}
 {{- end }}
