--- a/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-extra-env-vars-configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.keycloak.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -7,3 +8,4 @@ metadata:
 data:
   KC_HOSTNAME_URL: {{ .Values.keycloak.config.realmFrontendUrl | quote }}
   KC_HOSTNAME_ADMIN_URL: {{ .Values.keycloak.config.adminFrontendUrl | quote }}
+{{- end }}
