--- a/charts/podiumd/templates/sync-initial-job.yaml
+++ b/charts/podiumd/templates/sync-initial-job.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.kiss.enabled -}}
 {{- if .Values.kiss.sync.initialSync }}
 apiVersion: batch/v1
 kind: Job
@@ -58,4 +59,5 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
 {{- end }}
