--- a/charts/podiumd/templates/sync-kennisbank-cron-job.yaml
+++ b/charts/podiumd/templates/sync-kennisbank-cron-job.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.kiss.enabled -}}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -32,3 +33,4 @@ spec:
           nodeSelector:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+  {{- end }}
