--- a/charts/podiumd/templates/sync-secret.yaml
+++ b/charts/podiumd/templates/sync-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.kiss.enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,3 +14,4 @@ stringData:
   MEDEWERKER_OBJECTEN_CLIENT_SECRET: {{ .Values.kiss.adapter.secret | quote }}
   SDG_OBJECTEN_TOKEN: {{ .Values.kiss.objecten.token | quote }}
   VAC_OBJECTEN_TOKEN: {{ .Values.kiss.objecten.token | quote }}
+{{- end }}
