--- a/charts/podiumd/templates/sync-vac-cron-job.yaml
+++ b/charts/podiumd/templates/sync-vac-cron-job.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.kiss.enabled -}}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -34,3 +35,4 @@ spec:
           nodeSelector:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+  {{- end }}
