--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -85,7 +85,7 @@ openzaak:
   persistentVolume:
     volumeAttributeShareName: openzaak
   image:
-    tag: "1.15.0"
+    tag: "1.17.0"
   resources:
     requests:
       cpu: 100m
@@ -144,7 +144,7 @@ opennotificaties:
   persistentVolume:
     volumeAttributeShareName: opennotificaties
   image:
-    tag: "1.7.1"
+    tag: "1.8.0"
   resources:
     requests:
       cpu: 100m
@@ -199,7 +199,7 @@ objecten:
   persistentVolume:
     volumeAttributeShareName: objecten
   image:
-    tag: "2.4.4"
+    tag: "3.0.0"
   resources:
     requests:
       cpu: 100m
@@ -238,7 +238,7 @@ objecttypen:
       useTLS: true
     disable2fa: true
   image:
-    tag: "2.2.2"
+    tag: "3.0.0"
   resources:
     requests:
       cpu: 10m
@@ -269,7 +269,7 @@ openklant:
       useTLS: true
     disable2fa: true
   image:
-    tag: "2.3.0"
+    tag: "2.4.0"
   resources:
     requests:
       cpu: 100m
@@ -312,7 +312,7 @@ openformulieren:
   persistentVolume:
     volumeAttributeShareName: openformulieren
   image:
-    tag: "2.7.11"
+    tag: "2.8.5"
   resources:
     requests:
       cpu: 100m
@@ -370,7 +370,7 @@ openinwoner:
   persistentVolume:
     volumeAttributeShareName: openinwoner
   image:
-    tag: "1.25.0"
+    tag: "1.27.0"
   resources:
     requests:
       cpu: 200m
@@ -514,7 +514,7 @@ kiss:
       name: ""
     image:
       repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-      tag: "v0.5.1-20250107153635-2d5264c"
+      tag: "main-20250129154544-b179b49"
       pullPolicy: IfNotPresent
     resources:
       requests:
@@ -566,7 +566,7 @@ zac:
 
 clamav:
   image:
-    tag: "1.4.1"
+    tag: "1.4.2"
   nameOverride: clamav
   fullnameOverride: clamav
   clamdConfig: |
