chore: added podiumd job to create required objecttypen

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -517,8 +517,9 @@ objecttypen:
     disable2fa: true
   image:
     tag: "3.0.0"
-  job:
-    productaanvraag: false
+  # used for create-required-objecttypen podiumd job only
+  create_required_objecttypen_job:
+    enabled: true
   resources:
     requests:
       cpu: 10m
