--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -27,23 +27,23 @@ dependencies:
       - contact
       - zaak
   - name: openzaak
-    version: 1.7.0-beta.0
+    version: 1.8.0-beta.0
     repository: "@maykinmedia"
     condition: openzaak.enabled
   - name: opennotificaties
-    version: 1.8.0-beta.1
+    version: 1.8.0
     repository: "@maykinmedia"
     condition: opennotificaties.enabled
   - name: objecten
-    version: 2.7.0-beta.0
+    version: 2.7.1
     repository: "@maykinmedia"
     condition: objecten.enabled
   - name: objecttypen
-    version: 1.3.0-beta.3
+    version: 1.3.0
     repository: "@maykinmedia"
     condition: objecttypen.enabled
   - name: openklant
-    version: 1.5.0-beta.0
+    version: 1.5.0
     repository: "@maykinmedia"
     condition: openklant.enabled
   - name: openforms
