feat: created override for infinispan secret so the subchart can deploy properly when not initially installed

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -135,6 +135,8 @@ infinispan:
       storage:
         storageClassName: podiumd-standard
     security:
+      monitor:
+        password: changememonitor
       batch: |
         credentials add keystore -c password -p secret --path="internal-credentials.pfx"
         user create keycloak -p changemenow -g deployer
