feat: corrected infinispan referenced variables in infinispan-secret

--- a/charts/podiumd/templates/infinispan-secret.yaml
+++ b/charts/podiumd/templates/infinispan-secret.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "infinispan-helm-charts.secret" . }}
+  name: {{ printf "%s-generated-secret" (include "infinispan-helm-charts.name" .) }}
   labels:
     app: infinispan-secret-identities
   {{- include "infinispan-helm-charts.labels" . | nindent 4 }}
