--- a/charts/podiumd/templates/infinispan-secret.yaml
+++ b/charts/podiumd/templates/infinispan-secret.yaml
@@ -2,17 +2,17 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ printf "%s-generated-secret" (include "infinispan-helm-charts.name" .) }}
+  name: ispn-generated-secret
   labels:
     app: infinispan-secret-identities
-  {{- include "infinispan-helm-charts.labels" . | nindent 4 }}
+    clusterName: ispn
+    {{- include "podiumd.labels" . | nindent 4 }}
   annotations:
-  {{- include "infinispan-helm-charts.annotations" . | nindent 4 }}
     "helm.sh/resource-policy": keep
 type: Opaque
 stringData:
   username: monitor
-  password: {{ .Values.infinispan.security.monitor.secret }}
+  password: {{ .Values.infinispan.deploy.security.monitor.secret }}
   {{- if .Values.infinispan.deploy.security.batch }}
   identities-batch: |-
     {{- .Values.infinispan.deploy.security.batch | trim | nindent 4 }}
