feat: removed subchart labels/annotations from infinispan-secret and correctly referenced secret value

--- a/charts/podiumd/templates/infinispan-secret.yaml
+++ b/charts/podiumd/templates/infinispan-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ispn-generated-secret
+  name: {{ .Values.infinispan.deploy.secretName }}
   labels:
     app: infinispan-secret-identities
     clusterName: ispn
