feat: use infinispan.security.monitor secret instead of password

--- a/charts/podiumd/templates/infinispan-secret.yaml
+++ b/charts/podiumd/templates/infinispan-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.infinispan.deploy.secretName }}
+  name: {{ .Values.infinispan.deploy.security.secretName }}
   labels:
     app: infinispan-secret-identities
     clusterName: ispn
