--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -514,7 +514,7 @@ kiss:
       name: ""
     image:
       repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-      tag: "main-20250129154544-b179b49"
+      tag: "release-0.6.x-20250225135203-7183543"
       pullPolicy: IfNotPresent
     resources:
       requests:
@@ -528,7 +528,7 @@ kiss:
     secret: ""
     image:
       repository: ghcr.io/icatt-menselijk-digitaal/podiumd-adapter
-      tag: "latest"
+      tag: "v0.6.x-20250225135230-fc9468b"
       pullPolicy: IfNotPresent
     resources:
       requests:
