--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -497,8 +497,9 @@ kiss:
   vac:
     useVacs: false
     objectenBaseUrl: ""
+    objectenToken: ""
     objectTypeUrl: ""
-    objectTypeVersion: ""
+    objectTypeVersion: ""    
 
   oidc:
     authority: ""
