--- a/charts/podiumd/templates/frontend-secret.yaml
+++ b/charts/podiumd/templates/frontend-secret.yaml
@@ -34,5 +34,6 @@ stringData:
   POSTGRES_PASSWORD: {{ .Values.kiss.database.password | quote }}
   POSTGRES_USER: {{ .Values.kiss.database.user | quote }}
   SDG_API_KEY: {{ .Values.kiss.objecten.token | quote }}
+  VAC_OBJECTEN_TOKEN: {{ .Values.kiss.vac.objectenToken | quote }}
   ZAKEN_API_CLIENT_ID: {{ .Values.kiss.adapter.clientId | quote }}
   ZAKEN_API_KEY: {{ .Values.kiss.adapter.secret | quote }}
