--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -494,6 +494,13 @@ kiss:
     medewerkerUUID: ""
     vacUUID: ""
 
+  vac:
+    useVacs: false
+    objectenBaseUrl: ""
+    objectenToken: ""
+    objectTypeUrl: ""
+    objectTypeVersion: ""    
+
   oidc:
     authority: ""
     clientId: kiss
@@ -514,7 +521,7 @@ kiss:
       name: ""
     image:
       repository: ghcr.io/klantinteractie-servicesysteem/kiss-frontend
-      tag: "main-20250129154544-b179b49"
+      tag: "release-0.6.x-20250225135203-7183543"
       pullPolicy: IfNotPresent
     resources:
       requests:
@@ -528,7 +535,7 @@ kiss:
     secret: ""
     image:
       repository: ghcr.io/icatt-menselijk-digitaal/podiumd-adapter
-      tag: "latest"
+      tag: "v0.6.x-20250225135230-fc9468b"
       pullPolicy: IfNotPresent
     resources:
       requests:
