--- a/charts/brp-personen-mock/templates/personenmock-service.yaml
+++ b/charts/brp-personen-mock/templates/personenmock-service.yaml
@@ -1,14 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: personen-mock
+  name: {{ include "bm.name" . }}-brp-personen-mock
   labels:
-    app: personen-mock
+    app.kubernetes.io/instance: {{ .Values.instance }}
+    app.kubernetes.io/name: {{ include "bm.name" . }}-brp-personen-mock
+    {{- include "bm.labels" . | nindent 4 }}
 spec:
-  selector:
-    name: personen-mock
-  type: LoadBalancer
+  type: ClusterIP
   ports:
-    - name: "5010"
-      port: 5010
-      targetPort: http-mock
+    - name: http-brp-mock
+      port: {{ .Values.service.port }}
+      targetPort: http-brp-mock
+      protocol: TCP
+  selector:
+    app.kubernetes.io/instance: {{ .Values.instance }}
