--- a/charts/brp-personen-mock/templates/personenmock-config.yaml
+++ b/charts/brp-personen-mock/templates/personenmock-config.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "bm.name" . }}-config
+  name: brp-personen-mock
   labels:
-    app.kubernetes.io/instance: {{ .Values.instance }}
-    app.kubernetes.io/name: {{ include "bm.name" . }}-config
-    {{- include "bm.labels" . | nindent 4 }}
+    app.kubernetes.io/instance: podiumd
+    app.kubernetes.io/name: brp-personen-mock
 data:
   ASPNETCORE_ENVIRONMENT: "Release"
-  ASPNETCORE_URLS: "http://+:{{ .Values.service.port }}"
+  ASPNETCORE_URLS: "http://+:5010"
