--- a/charts/brp-personen-mock/templates/personenmock-deloyment.yaml
+++ b/charts/brp-personen-mock/templates/personenmock-deloyment.yaml
@@ -1,26 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "bm.name" . }}-brp-personen-mock
+  name: brp-personen-mock
   labels:
-    app.kubernetes.io/instance: {{ .Values.instance }}
-    app.kubernetes.io/name: {{ include "bm.name" . }}-brp-personen-mock
-    {{- include "bm.labels" . | nindent 4 }}
+    app.kubernetes.io/instance: podiumd
+    app.kubernetes.io/name: brp-personen-mock
 spec:
-  replicas: {{ .Values.replicas }}
+  replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/instance: {{ .Values.instance }}
-      app.kubernetes.io/name: {{ include "bm.name" . }}-brp-personen-mock
+      app.kubernetes.io/instance: podiumd
+      app.kubernetes.io/name: brp-personen-mock
   template:
     metadata:
       labels:
-        app.kubernetes.io/instance: {{ .Values.instance }}
-        app.kubernetes.io/name: {{ include "bm.name" . }}-brp-personen-mock
-        {{- include "bm.labels" . | nindent 8 }}
+        app.kubernetes.io/instance: podiumd
+        app.kubernetes.io/name: brp-personen-mock
     spec:
-      serviceAccount: {{ .Values.serviceAccount }}
-      serviceAccountName: {{ .Values.serviceAccount }}
+      serviceAccount: brp-personen-mock
+      serviceAccountName: brp-personen-mock
       containers:
         - name: brp-personen-mock
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
